--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
         android:scaleType="centerCrop"
         android:src="@drawable/birthday" />
     <TextView
-        android:text="Happy Birthday Nidhi"
+        android:text="Happy Birthday Vikky"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="30sp"
